# PathTracing

./: .gitignore  CMakeLists.txt  README.md  run_all.sh
include/: bound.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  pathtracing.hpp  plane.hpp  ray.hpp  raytracing.hpp  render.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp
mesh/tank/: dimo.mtl
src/: image.cpp  kdtree.cpp  main.cpp  mesh.cpp  pathtracing.cpp  raytracing.cpp  scene_parser.cpp  texture.cpp
